--- a/assets/style.css
+++ b/assets/style.css
@@ -44,7 +44,7 @@ ul.navbar {
 
 ul.navbar li {
   background: #000000;
-  border-radius: 10px;
+  border-radius: 0;
   box-sizing: border-box;
   flex: 1 1 1px;
   margin: 0.5em;
